# Y86-Simulator

./: README.md  report.docx
back_end/: CMakeCache.txt  CMakeLists.txt  Decode.cpp  Decode.h  Execute.cpp  Execute.h  Fetch.cpp  Fetch.h  Makefile  Memory.cpp  Memory.h  Register.cpp  Register.h  Renewpc.cpp  Renewpc.h  Wback.cpp  Wback.h  cmake_install.cmake  header.h  main.cpp  variables_declaration.h  variables_definition.cpp
front_end/: connect.py  script.js  web.html
front_end/answers/: abs-asum-cmov.json  abs-asum-jmp.json  asum.json  asumi.json  asumr.json  cjr.json  j-cc.json  poptest.json  prog1.json  prog10.json  prog2.json  prog3.json  prog4.json  prog5.json
front_end/styles/: style.css
front_end/test/: asumi.yo
